--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -1,7 +1,30 @@
 .container{
     margin: 50px;
     display: flex;
+    flex-direction:row;
+}
+
+.form{
+    display: flex;
     flex-direction: column;
+    width: 100%;
+}
+
+.form form{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+}
+
+.grupoTexto{
+    display: flex;
+    flex-direction: column;
+}
+
+.grupoTexto label{
+    margin-bottom: 25px;
 }
 
 .altaTitulo{
@@ -16,17 +39,17 @@
 }
 
 .grupoInputs{
-    width: 50%;
+    width: 70%;
     margin: 10px;
 }
 
 .grupoInputs input{
     width: 70%;
+    height: 25px;
+    margin-bottom: 10px;
 }
 
-.grupoInputs label{
-    padding: 10px;
-}
+
 
 .btn-submit{
     width: 20%;
