--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -1,5 +1,11 @@
+body{
+    padding: 0;
+    margin: 0;
+}
+
 .container{
-    margin: 50px;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction:row;
 }
