--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -1,6 +1,12 @@
 body{
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.header{
+    height: 7vh;
 }
 
 .container{
@@ -8,6 +14,7 @@ body{
     padding: 0;
     display: flex;
     flex-direction:row;
+    height: 93vh;
 }
 
 .form{
