--- a/css/menu.css
+++ b/css/menu.css
@@ -8,7 +8,7 @@ body{
 .header{
     display: flex;
     flex-direction: column;
-    background-color: darkturquoise;
+    background-color: rgb(51, 72, 72);
     margin: 0;
     padding: 0;
 }
