--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     display: flex;
     flex-direction: column;
-    font: 100;
+    font: 100vh;
 }
 
 .header{
@@ -59,7 +59,7 @@ body{
 }
 
 .grupoInputs input{
-    border: 1px solid rgb(194, 27, 27);
+    border: 1px solid black;
     border-radius: 50px;
     width: 70%;
     height: 25px;
