--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -1,6 +1,13 @@
 body{
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    font: 100;
+}
+
+.header{
+    height: 7vh;
 }
 
 .container{
@@ -8,6 +15,7 @@ body{
     padding: 0;
     display: flex;
     flex-direction:row;
+    height: 93vh;
 }
 
 .form{
@@ -51,7 +59,7 @@ body{
 }
 
 .grupoInputs input{
-    border: 1px solid black;
+    border: 1px solid rgb(194, 27, 27);
     border-radius: 50px;
     width: 70%;
     height: 25px;
