--- a/css/menu.css
+++ b/css/menu.css
@@ -22,7 +22,7 @@ body{
     width: 10%;
     margin: 0;
     padding: 0;
-    background-color: darkturquoise;
+    background-color: rgb(45, 223, 223);
 }
 
 .menu ul{
