--- a/css/formAltas.css
+++ b/css/formAltas.css
@@ -10,6 +10,21 @@ body{
     height: 7vh;
 }
 
+.labelInput{
+    border-radius: 50px;
+    display: flex;
+    flex-wrap: wrap;
+   
+}
+
+.labelInput label{
+width: 200px;
+}
+
+.inputfile{
+   
+}
+
 .container{
     margin: 0;
     padding: 0;
@@ -32,13 +47,20 @@ body{
     align-content: center;
 }
 
-.grupoTexto{
+.labelgroup{
+    
     display: flex;
     flex-direction: column;
+   
 }
 
 .grupoTexto label{
     margin-bottom: 25px;
+}
+
+.grupoTexto{
+    display: flex;
+   justify-content: space-around;
 }
 
 .altaTitulo{
@@ -48,18 +70,16 @@ body{
 
 .altaInput{
     display: flex;
-    flex-direction: column;
-    align-items:center;
+    width: 200%;
 }
 
 .grupoInputs{
-
-    width: 70%;
-    margin: 10px;
+    width:50%;
+   display: flex;
+   flex-direction: column;
 }
 
 .grupoInputs input{
-    border: 1px solid rgb(194, 27, 27);
     border-radius: 50px;
     width: 70%;
     height: 25px;
@@ -71,4 +91,8 @@ body{
 .btn-submit{
     width: 20%;
     align-self:flex-end;
+}
+.grupoTexto1{
+    border-radius: 50px;
+   
 }
