--- a/css/menu.css
+++ b/css/menu.css
@@ -22,7 +22,7 @@ body{
     width: 10%;
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(45, 223, 223);
 }
 
 .menu ul{
@@ -45,7 +45,7 @@ body{
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    background-color: darkturquoise;
+    background-color: rgb(120, 183, 184);
     color: rgb(71, 69, 69);
     background-color: inherit;
     margin-bottom: 10px;
@@ -57,7 +57,7 @@ body{
 }
 
 .menu ul li:hover{
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 0);
     background-color: aquamarine;
     border-top-right-radius: 10px;
     border-radius: 10px;
